  See the editor's right mouse menu or tolls popup (ctrl+t).

Data compare: New submenu in SQL result's "Compare selected cells" menu
  which allows to compare cells to clipboard.

Refactoring: The DBDiff-Plugin's functionality was moved to SQuirreL's core.
  The DBDiff-Plugin won't be shipped anymore
  and in case it is still found it is programmatically kept from being loaded.

Bug fixes:

#1521 DBCopy: Fixed Copy/Paste of multiple tables deleted data in wrong order.

DBCopy: Fixed NullPointerException which occurred when parts of the Object where reloaded during table copying.

#1520 "Export Configuration"-Plugin
  Export button of the "Configure Export" dialog, see menu Plugins --> Export --> "Configure Export",
  raised NullPointerException.
  Note that the Alias import/export function, see menu Aliases --> "Import/Export Aliases",
  may be considered superior to the "Export Configuration"-Plugin.

File export dialog: Fixed missing formatting radio buttons.

Look and Feel Plugin / Nimbus look and feel:
  Merged pull request https://github.com/squirrel-sql-client/squirrel-sql-code/pull/21
  Fix for open/close icon's of trees for Nimbus dark mode.
  Thanks to Wayne Zhang for the pull request.

The 'Show foreign key references' right mouse menu of SQL results
  didn't work when the SQL result list contained sub selects.

When long Session tab titles are displayed the titles now reflect changes to the default catalog.
  See File --> Global Preferences --> tab general --> check box "Use short Session tab title ...".

SQL history changes are now immediately reflected in all open SQL panels.

SQL result tables: Copy as markdown and comparing table data failed when row numbers were displayed.

When non-breaking space where pasted into SQuirreL's editor
  they broke SQL reformatting and probably caused other problems, too.
  Now when text is pasted into SQuirreL's editor
  non-breaking space are replaced by ordinary spaces.
