@@ -29,13 +29,9 @@ import net.sourceforge.squirrel_sql.client.session.mainpanel.objecttree.expander
 import net.sourceforge.squirrel_sql.client.session.mainpanel.objecttree.expanders.ProcedureTypeExpander;
 import net.sourceforge.squirrel_sql.client.session.mainpanel.objecttree.expanders.TableTypeExpander;
 import net.sourceforge.squirrel_sql.client.session.mainpanel.objecttree.expanders.UDTTypeExpander;
-import net.sourceforge.squirrel_sql.client.session.mainpanel.objecttree.treefinder.ObjectTreeFinder;
-import net.sourceforge.squirrel_sql.client.session.mainpanel.objecttree.treefinder.ObjectTreeFinderGoToNextResultHandle;
-import net.sourceforge.squirrel_sql.client.session.mainpanel.objecttree.treefinder.ObjectTreeSearchResultFuture;
-import net.sourceforge.squirrel_sql.client.session.schemainfo.FilterMatcher;
 import net.sourceforge.squirrel_sql.fw.sql.DatabaseObjectType;
 
-import javax.swing.SwingUtilities;
+import javax.swing.*;
 import javax.swing.tree.DefaultTreeModel;
 import java.util.Iterator;
 
@@ -195,11 +191,6 @@ public class ObjectTreeModel extends DefaultTreeModel
 	public INodeExpander[] getExpanders(DatabaseObjectType dboType)
 	{
 		return _expanders.getExpanders(dboType);
-	}
-
-	public ObjectTreeSearchResultFuture findPathToDbInfo(String catalog, String schema, FilterMatcher objectMatcher, ObjectTreeNode startNode, boolean useExpanders, ObjectTreeFinderGoToNextResultHandle goToNextResultHandle)
-	{
-		return new ObjectTreeFinder(getRootObjectTreeNode().getSession(), _expanders).findPathToDbInfo(catalog, schema, objectMatcher, startNode, useExpanders, goToNextResultHandle);
 	}
 
 	public void addKnownDatabaseObjectType(DatabaseObjectType dboType)
