@@ -1,9 +1,6 @@
 package net.sourceforge.squirrel_sql.client.session.mainpanel.objecttree.treefinder;
 
-import net.sourceforge.squirrel_sql.client.Main;
-import net.sourceforge.squirrel_sql.client.session.ISession;
-import net.sourceforge.squirrel_sql.client.session.mainpanel.objecttree.INodeExpander;
-import net.sourceforge.squirrel_sql.client.session.mainpanel.objecttree.ObjectTreeExpanders;
+import net.sourceforge.squirrel_sql.client.session.mainpanel.objecttree.ObjectTree;
 import net.sourceforge.squirrel_sql.client.session.mainpanel.objecttree.ObjectTreeNode;
 import net.sourceforge.squirrel_sql.client.session.schemainfo.FilterMatcher;
 import net.sourceforge.squirrel_sql.fw.sql.IDatabaseObjectInfo;
@@ -11,24 +8,20 @@ import net.sourceforge.squirrel_sql.fw.util.log.ILogger;
 import net.sourceforge.squirrel_sql.fw.util.log.LoggerController;
 
 import javax.swing.tree.TreePath;
-import java.util.List;
 
 public class ObjectTreeFinder
 {
-   private static ILogger logger = LoggerController.createLogger(ObjectTreeFinder.class);
+   private static ILogger s_log = LoggerController.createLogger(ObjectTreeFinder.class);
+   private final ObjectTree _objectTree;
 
-   private ISession _session;
-   private ObjectTreeExpanders _expanders;
-
-   public ObjectTreeFinder(ISession session, ObjectTreeExpanders expanders)
+   public ObjectTreeFinder(ObjectTree objectTree)
    {
-      _session = session;
-      _expanders = expanders;
+      _objectTree = objectTree;
    }
 
    public ObjectTreeSearchResultFuture findPathToDbInfo(String catalog, String schema, FilterMatcher objectMatcher, ObjectTreeNode startNode, boolean useExpanders, ObjectTreeFinderGoToNextResultHandle goToNextResultHandle)
    {
-      ObjectTreeSearchResultFutureIntern toFill = new ObjectTreeSearchResultFutureIntern(_session);
+      ObjectTreeSearchResultFutureIntern toFill = new ObjectTreeSearchResultFutureIntern(_objectTree.getSession());
       _getPathToDbInfo(catalog, schema, objectMatcher, startNode, useExpanders, toFill, goToNextResultHandle);
       return toFill;
    }
@@ -45,12 +38,7 @@ public class ObjectTreeFinder
       {
          if(useExpanders &&  startNode.getAllowsChildren() && 0 == startNode.getChildCount() && startNode.hasNoChildrenFoundWithExpander() == false)
          {
-            INodeExpander[] expanders = _expanders.getExpanders(startNode.getDatabaseObjectType());
-
-            for (INodeExpander expander : expanders)
-            {
-               toFill.addTask(getExpandDescr(startNode), () -> doExpand(startNode, expander));
-            }
+            toFill.addTask(getExpandDescr(startNode), () -> _objectTree.expandNode(startNode));
          }
 
          toFill.addTask(getRecurseDescription(startNode), () -> recurseChildren(catalog, schema, objectMatcher, startNode, useExpanders, toFill, goToNextResultHandle));
@@ -77,42 +65,6 @@ public class ObjectTreeFinder
          {
             return;
          }
-      }
-   }
-
-   private void doExpand(ObjectTreeNode startNode, INodeExpander expander)
-   {
-      try
-      {
-         List<ObjectTreeNode> children = expander.createChildren(startNode.getSession(), startNode);
-
-         if (children.isEmpty())
-         {
-            startNode.setNoChildrenFoundWithExpander(true);
-         }
-         else
-         {
-            for (int j = 0; j < children.size(); j++)
-            {
-               ObjectTreeNode newChild = children.get(j);
-               if (0 == _expanders.getExpanders(newChild.getDatabaseObjectType()).length)
-               {
-                  newChild.setAllowsChildren(false);
-               }
-               else
-               {
-                  newChild.setAllowsChildren(true);
-               }
-
-               startNode.add(newChild);
-            }
-         }
-      }
-      catch (Exception e)
-      {
-         String msg = "Error loading object type " +  startNode.getDatabaseObjectType() +". Error: " + e +  ". See SQuirreL Logs for stacktrace.";
-         Main.getApplication().getMessageHandler().showErrorMessage(msg);
-         logger.error(msg, e);
       }
    }
 
